Refactor catalog services